test/corpus/namespace.txt
================================================================================
Namespace children
================================================================================

namespace children foo bar

--------------------------------------------------------------------------------

(source_file
    (namespace
    (simple_word)
    (simple_word)))

================================================================================
Namespace code
================================================================================

namespace code {puts "hello"}

--------------------------------------------------------------------------------

(source_file
    (namespace
    (braced_word
        (command
        (simple_word)
        (word_list
            (quoted_word))))))

================================================================================
Namespace current
================================================================================

namespace current

--------------------------------------------------------------------------------

(source_file
    (namespace))

================================================================================
Namespace delete
================================================================================

namespace delete foo bar

--------------------------------------------------------------------------------

(source_file
    (namespace
    (simple_word)
    (simple_word)))

================================================================================
Namespace eval
================================================================================

namespace eval foo {puts "world"} arg1 arg2

--------------------------------------------------------------------------------

(source_file
    (namespace
    (simple_word)
    (braced_word
        (command
        (simple_word)
        (word_list
            (quoted_word))))
    (simple_word)
    (simple_word)))

================================================================================
Namespace exists
================================================================================

namespace exists foo

--------------------------------------------------------------------------------

(source_file
    (namespace
    (simple_word)))

================================================================================
Namespace export
================================================================================

namespace export -clear foo bar

--------------------------------------------------------------------------------

(source_file
    (namespace
    (simple_word)
    (simple_word)))

================================================================================
Namespace forget
================================================================================

namespace forget foo bar

--------------------------------------------------------------------------------

(source_file
    (namespace
    (simple_word)
    (simple_word)))

================================================================================
Namespace import
================================================================================

namespace import -force foo bar

--------------------------------------------------------------------------------

(source_file
    (namespace
    (simple_word)
    (simple_word)))

================================================================================
Namespace inscope
================================================================================

namespace inscope foo {puts "inscope"} arg1 arg2

--------------------------------------------------------------------------------

(source_file
    (namespace
    (simple_word)
    (braced_word
        (command
        (simple_word)
        (word_list
            (quoted_word))))
    (simple_word)
    (simple_word)))

================================================================================
Namespace origin
================================================================================

namespace origin foo

--------------------------------------------------------------------------------

(source_file
  (namespace
    (simple_word)))

================================================================================
Namespace parent
================================================================================

namespace parent foo

--------------------------------------------------------------------------------

(source_file
  (namespace
    (simple_word)))

================================================================================
Namespace qualifiers
================================================================================

namespace qualifiers foo

--------------------------------------------------------------------------------

(source_file
  (namespace
    (simple_word)))

================================================================================
Namespace tail
================================================================================

namespace tail foo

--------------------------------------------------------------------------------

(source_file
  (namespace
    (simple_word)))

================================================================================
Namespace which
================================================================================

namespace which -command foo

--------------------------------------------------------------------------------

(source_file
  (namespace
    (simple_word)))
